--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,15 +4,18 @@
     </head>
     <title>portfolio</title>
     <body>
+        <img class="ring" src="pattern-rings.svg">
         <div class="navbar">
             <p>adamkeyes</p>
             <div><img src="icon-github.svg"><img src="icon-frontend-mentor.svg"><img src="icon-linkedin.svg"><img src="icon-twitter.svg"></div>
         </div>
         <div class="card">
             <div class="text">
+                
                 Nice to meet you!<br> I'm <span class="name">Adam keyes.</span> 
                 <div class="small_text"><p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Sed ultricies magna vitae lorem tristique, vel dapibus ante laoreet.<br> Sed tincidunt fringilla purus. <br><br><br> </p></div>
                 <p class="contact"><b>CONTACT ME</b></p>
+                <img class="circle" src="pattern-circle.svg">
             </div>
             <div class="pic">
                 <img src="image-profile-desktop.webp">
@@ -27,6 +30,7 @@
             <div>Sass<p class="years">4 Years Experience</p></div>
             </div>
         </div>
+        <img class="ring2" src="pattern-rings.svg">
             <div class="projects">
                 <span class="projtext">Projects</span><span class="Contact">CONTACT ME</span>
                 <div class="projcards">
