--- a/Creative/index.html
+++ b/Creative/index.html
@@ -27,7 +27,8 @@
             </div>
         </div>
         <div class="card3">
-            <div class="left_third"><p class="head small">Our approach for<br>creating a winning<br>brand</p></div>
+            <div class="left_third">
+                <p class="head_small">Our approach for<br>creating a winning<br>brand</p></div>
             <div class="right_third">
                 <div class="bigbox">
                     <div class="heading">
