--- a/dark_lp/index.html
+++ b/dark_lp/index.html
@@ -1,52 +1,150 @@
 <html>
+
 <head>
-    <title>landing page</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/dark_lp/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap');
-    </style>
+  <title>landing page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap');
+  </style>
 </head>
+
 <body>
-    <div class="navbar">
-        <img src="/dark_lp/images/logo.svg">
-        <div class="menu">
-            <span class="menu_style">Features</span>
-            <span class="menu_style">Team</span>
-            <span class="menu_style">Sign in</span>
-        </div>
+  <img class="curve" src="./images/bg-curvy-desktop.svg">
+  <div class="navbar">
+    <img src="./images/logo.svg">
+    <div class="menu">
+      <span class="menu_style">Features</span>
+      <span class="menu_style">Team</span>
+      <span class="menu_style">Sign in</span>
     </div>
-    <div class="Brief_intro">
-      <div class="intro_pic"><img src="/dark_lp/images/illustration-intro.png"></div>
-      <div class="intro_text">
-          <p class="heading">All your files in one secure location, accessible anywhere.</p>
-          <p class="body_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus consectetur quae esse quos consequuntur accusamus libero perspiciatis quisquam eveniet.</p>
-          <p class="button">Get Started</p>
-      </div>
-    </div>
-    <div class="advantages">
-      <div class="grid">
-          <img class="grid_logo"src="/dark_lp/images/icon-access-anywhere.svg">
-          <p class="grid_heading"><br>Access your Files anywhere</p>
-          <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas hic nulla nam error nostrum rerum ab vero.</p>
-      </div>
-      <div class="grid">
-          <img class="grid_logo" src="/dark_lp/images/icon-security.svg">
-          <p class="grid_heading"><br>Security you can trust</p>
-          <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas hic nulla nam error nostrum rerum ab vero.</p>
-      </div>
-      <div class="grid">
-          <img class="grid_logo" src="/dark_lp/images/icon-collaboration.svg">
-          <p class="grid_heading"><br>Real-time collaboration</p>
-          <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas hic nulla nam error nostrum rerum ab vero.</p>
-      </div>
-      <div class="grid">
-          <img class="grid_logo" src="/dark_lp/images/icon-any-file.svg">
-          <p class="grid_heading"><br>Store any type of File</p>
-          <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas hic nulla nam error nostrum rerum ab vero.</p>
-      </div>
   </div>
+  <div class="Brief_intro">
+    <div class="intro_pic"><img src="./images/illustration-intro.png"></div>
+    <div class="intro_text">
+      <p class="heading">All your files in one secure location, accessible anywhere.</p>
+      <p class="body_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem natus consectetur
+        quae esse quos consequuntur accusamus libero perspiciatis quisquam eveniet.</p>
+      <p class="button">Get Started</p>
+    </div>
+  </div>
+  <div class="advantages">
+    <div class="grid">
+      <img class="grid_logo" src="./images/icon-access-anywhere.svg">
+      <p class="grid_heading"><br>Access your Files anywhere</p>
+      <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas
+        hic nulla nam error nostrum rerum ab vero.</p>
+    </div>
+    <div class="grid">
+      <img class="grid_logo" src="./images/icon-security.svg">
+      <p class="grid_heading"><br>Security you can trust</p>
+      <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas
+        hic nulla nam error nostrum rerum ab vero.</p>
+    </div>
+    <div class="grid">
+      <img class="grid_logo" src="./images/icon-collaboration.svg">
+      <p class="grid_heading"><br>Real-time collaboration</p>
+      <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas
+        hic nulla nam error nostrum rerum ab vero.</p>
+    </div>
+    <div class="grid">
+      <img class="grid_logo" src="./images/icon-any-file.svg">
+      <p class="grid_heading"><br>Store any type of File</p>
+      <p class="grid_text"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit eos, voluptas
+        hic nulla nam error nostrum rerum ab vero.</p>
+    </div>
+  </div>
+  <div class="productive">
+    <div>
+      <img class="prod_img" src="./images/illustration-stay-productive.png">
+    </div>
+    <div class="prod_Text">
+      <p class="heading prod_head align">Stay productive,wherever you are</p>
+      <p class="body_text align">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae repudiandae quod vel
+        corrupti animi sunt doloribus, distinctio perspiciatis, architecto reprehenderit laboriosam! Mollitia quas
+        quidem eaque blanditiis impedit dolores id corrupti.</p>
+      <p class="body_text align working">See how Fylo works<span><img src="./images/icon-arrow.svg"></span></p>
+    </div>
+  </div>
+  <div class="profile">
+    <img class="quotes" src="./images/bg-quotes.png">
+    <div class="prof_grid">
+      <div class="body_text align">Fylo has improved our team productivity by an order of magnitude. Since making the
+        switch our team has
+        become a well-oiled collaboration machine.</div>
+      <div class="prof_about">
+        <img class="profile_pic" src="./images/profile-1.jpg">
+        <div class="info grid_text align"><span class="bold">Satish Patel</span><br>Founder & CEO, Huddle</div>
+      </div>
+    </div>
+    <div class="prof_grid">
+      <div class=" hello body_text align"> Fylo has improved our team productivity by an order of magnitude. Since making the
+        switch our team has
+        become a well-oiled collaboration machine.
+      </div>
+      <div class="prof_about">
+        <img class="profile_pic" src="./images/profile-2.jpg">
+        <div class=" info grid_text align"><span class="bold"> Bruce McKenzie</span><br>Founder & CEO, Huddle</div>
+      </div>
+    </div>
+    <div class="prof_grid">
+      <div class="body_text align"> Fylo has improved our team productivity by an order of magnitude. Since making the
+        switch our team has
+        become a well-oiled collaboration machine.
+      </div>
+      <div class="prof_about">
+        <img class="profile_pic" src="./images/profile-2.jpg">
+        <div class="info grid_text align"><span class="bold">Iva Boyd</span><br>Founder & CEO, Huddle</div>
+      </div>
+    </div>
+  </div>
+  <div class="early_access">
+    <p class="heading">Get early access today</p>
+    <p class=" accessText body_text"> It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+      questions, our support team would be happy to help you.</p>
+    <div class="buttons">
+        <div class="email body_text grey">
+          <form>
+            <label><input type="email" placeholder="email@example.com"></label>
+          </form>
+        </div>
+        <div class="Free_trial body_text">Get Started For Free</div>
+    </div>
+  </div>
+  <div class="footer">
+      <div class="outer">
+        <div class="company ">
+          <img src="./images/logo.svg">
+          <br><img class="location " src="./images/icon-location.svg">
+          <span class="grid_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi dolor id quae beatae dolores, eum numquam neque.</span>
+        </div>
+         <div class="contacts marg">
+            <img src="./images/icon-phone.svg"><span class="body_text"> +1-543-123-4567
+            </span><br>
+            <span class="body_text">example@fylo.com</span>
+         </div>
+       <div class="know marg body_text">
+          <ul>About Us</ul>
+          <ul>Jobs</ul>
+          <ul>Press</ul>
+          <ul>Blog</ul>
+       </div>
+       <div class="know marg body_text">
+          <ul>Contact us</ul>
+          <ul>Terms</ul>
+          <ul>Policy</ul>
+       </div>
+       <div class="marg favicon">
+          <img src="./images/logo-facebook.svg">
+          <img src="./images/twitter.svg">
+          <img src="./images/logo-instagram.svg">
+       </div>      
+      </div>
+          
+  </div>
+
 </body>
+
 </html>
